--- a/editor/index.html
+++ b/editor/index.html
@@ -2,7 +2,7 @@
 <html ng-app="myApp" ng-controller="myCtrl">
 <head>
 <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.7/angular.min.js"></script>
-<script src="https://maps.googleapis.com/maps/api/js?v=3.exp&sensor=false"></script>
+<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDNWHZ9dm_T63i7NDRmVkU6WWd-VjPFGac&v=3.exp&sensor=false"></script>
   <script src="http://dylanfprice.github.io/angular-gm/1.0.0/angular-gm.min.js"></script>
   <script src="js/editor.js"></script>
   <link rel="stylesheet" href="css/editor.css" />
